--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -20,100 +20,105 @@ advanced {
         tconstruct:battlesign
         immersiveengineering:metal:38
         tconstruct:frypan
-        tconstruct:arrow
         immersiveengineering:metal:39
         immersiveengineering:metal:36
         immersiveengineering:metal:37
-        enderio:block_dark_fused_quartz
         enderio:block_pasture_fused_quartz
-        tconstruct:crossbow
         minecraft:chain_command_block
         twilightforest:canopy_door
-        ceramics:clay_bucket
         tconstruct:longbow
         minecraft:structure_void
         enderio:block_not_holy_enlightened_fused_quartz
         tconstruct:shuriken
         enderio:item_soul_vial
         enderio:block_unholy_dark_fused_quartz
+        twilightforest:mangrove_door
+        tconstruct:scythe
+        enderio:block_not_unholy_fused_glass
+        twilightforest:trans_door
+        enderio:block_not_pasture_dark_fused_quartz
+        tconstruct:hatchet
+        minecraft:tipped_arrow
+        tconstruct:mattock
+        minecraft:structure_block
+        twilightforest:sort_door
+        twilightforest:miniature_structure
+        twilightforest:twilight_oak_door
+        enderio:block_holy_fused_glass
+        tconstruct:excavator
+        tconstruct:lumberaxe
+        enderio:block_not_pasture_enlightened_fused_glass
+        enderio:block_pasture_dark_fused_quartz
+        enderio:block_unholy_enlightened_fused_glass
+        enderio:block_unholy_fused_glass
+        enderio:block_dark_fused_glass
+        tconstruct:kama
+        enderio:block_not_holy_dark_fused_quartz
+        thermalexpansion:morb
+        enderio:block_not_pasture_dark_fused_glass
+        minecraft:repeating_command_block
+        twilightforest:mine_door
+        immersiveengineering:shader_bag
+        tconstruct:shortbow
+        enderio:block_not_holy_enlightened_fused_glass
+        bloodmagic:upgrade_tome
+        enderio:block_holy_dark_fused_glass
+        immersiveengineering:metal:40
+        enderio:block_not_holy_fused_glass
+        bloodmagic:upgrade_trainer
+        enderio:block_enlightened_fused_glass
+        tconstruct:arrow
+        enderio:block_dark_fused_quartz
+        forge:bucketfilled
+        tconstruct:crossbow
+        ceramics:clay_bucket
         minecraft:barrier
         enderio:item_broken_spawner
         enderio:block_not_holy_dark_fused_glass
         astralsorcery:blockcollectorcrystal
-        twilightforest:mangrove_door
         enderio:block_not_unholy_enlightened_fused_glass
         thermalexpansion:florb
-        tconstruct:scythe
         tconstruct:broadsword
-        enderio:block_not_unholy_fused_glass
         enderio:block_not_unholy_fused_quartz
         enderio:block_not_unholy_enlightened_fused_quartz
-        twilightforest:trans_door
         enderio:block_holy_fused_quartz
         enderio:block_pasture_dark_fused_glass
-        enderio:block_not_pasture_dark_fused_quartz
         enderio:block_not_unholy_dark_fused_quartz
         tconstruct:cleaver
-        tconstruct:hatchet
         enderio:block_unholy_enlightened_fused_quartz
         tconstruct:pickaxe
         minecraft:potion
         enderio:block_pasture_enlightened_fused_glass
         immersiveengineering:shader
-        minecraft:tipped_arrow
-        tconstruct:mattock
         twilightforest:time_door
         enderio:block_not_unholy_dark_fused_glass
-        minecraft:structure_block
         tconstruct:shovel
-        twilightforest:sort_door
         enderio:block_pasture_fused_glass
-        twilightforest:miniature_structure
-        twilightforest:twilight_oak_door
         enderio:item_material:39
         minecraft:lingering_potion
-        enderio:block_holy_fused_glass
-        tconstruct:excavator
-        tconstruct:lumberaxe
         enderio:block_not_pasture_enlightened_fused_quartz
         minecraft:command_block_minecart
-        enderio:block_not_pasture_enlightened_fused_glass
         enderio:block_holy_dark_fused_quartz
         enderio:block_unholy_dark_fused_glass
+        thaumcraft:plate:1
         enderio:block_holy_enlightened_fused_glass
-        enderio:block_pasture_dark_fused_quartz
         enderio:block_not_holy_fused_quartz
         minecraft:spawn_egg
-        enderio:block_unholy_enlightened_fused_glass
-        enderio:block_unholy_fused_glass
-        enderio:block_dark_fused_glass
-        tconstruct:kama
         minecraft:command_block
-        enderio:block_not_holy_dark_fused_quartz
         enderio:block_pasture_enlightened_fused_quartz
-        thermalexpansion:morb
-        enderio:block_not_pasture_dark_fused_glass
-        minecraft:repeating_command_block
-        twilightforest:mine_door
+        thermalfoundation:material:640
         enderio:block_holy_enlightened_fused_quartz
-        immersiveengineering:shader_bag
         minecraft:splash_potion
-        tconstruct:shortbow
         tconstruct:bolt
         tconstruct:rapier
-        enderio:block_not_holy_enlightened_fused_glass
-        bloodmagic:upgrade_tome
         astralsorcery:blockcelestialcollectorcrystal
         enderio:block_unholy_fused_quartz
         enderio:block_not_pasture_fused_quartz
         twilightforest:dark_door
-        enderio:block_holy_dark_fused_glass
-        immersiveengineering:metal:40
-        enderio:block_not_holy_fused_glass
         tconstruct:longsword
         enderio:block_enlightened_fused_quartz
-        bloodmagic:upgrade_trainer
-        enderio:block_enlightened_fused_glass
+        thermalfoundation:material:657
+        thermalfoundation:material:656
         enderio:block_not_pasture_fused_glass
      >
 }
