--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,6 +2,18 @@
 
 ~CONFIG_VERSION: 0.1.0
 
+world-1996152812 {
+    B:autocraftingEnabled=true
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+    B:recipeBookmarksEnabled=true
+}
+
+
 world-78688046 {
     B:autocraftingEnabled=true
     B:bookmarkOverlayEnabled=true
@@ -45,7 +57,7 @@ world68597 {
     B:autocraftingEnabled=true
 
     # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=false
+    B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
