--- a/config/actuallyadditions.cfg
+++ b/config/actuallyadditions.cfg
@@ -196,7 +196,7 @@ other {
     B:"Version Specific Update Checker"=true
 
     # Should Actually Additions Loot generate in dungeons?
-    B:"Village and Dungeon Loot"=true
+    B:"Village and Dungeon Loot"=false
 
     # Should right-clicking a bowl on water blocks create a water bowl?
     B:"Water Bowl"=true
