--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -135,7 +135,7 @@ world {
     # TRUE
     # FALSE
     # DEFAULT
-    S:enable_explosions=DEFAULT
+    S:enable_explosions=TRUE
 
     # If set to DEFAULT, then players can decide their PVP status.
     # Valid values:
