--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -10,113 +10,173 @@
 
 advanced {
     S:itemBlacklist <
-        immersiveengineering:metal:34
         immersiveengineering:metal:35
         tconstruct:hammer
-        immersiveengineering:metal:32
-        immersiveengineering:metal:33
-        immersiveengineering:metal:30
-        immersiveengineering:metal:31
+        tconstruct:large_sword_blade
+        tconstruct:binding
+        tconstruct:toolforge:0:enderio:block_alloy:0
+        tconstruct:fletching
+        tconstruct:toolforge:0:enderio:block_alloy:4
+        tconstruct:large_plate
+        tconstruct:toolforge:0:enderio:block_alloy:3
+        tconstruct:toolforge:0:enderio:block_alloy:2
+        tconstruct:toolforge:0:enderio:block_alloy:1
         tconstruct:battlesign
-        immersiveengineering:metal:38
+        tconstruct:toolforge:0:enderio:block_alloy:8
         tconstruct:frypan
-        immersiveengineering:metal:39
-        immersiveengineering:metal:36
-        immersiveengineering:metal:37
+        tconstruct:arrow
+        tconstruct:toolforge:0:enderio:block_alloy:7
+        tconstruct:toolforge:0:enderio:block_alloy:6
+        tconstruct:toolforge:0:enderio:block_alloy:5
+        enderio:block_dark_fused_quartz
+        forge:bucketfilled
+        tconstruct:scythe_head
         enderio:block_pasture_fused_quartz
+        tconstruct:crossbow
         minecraft:chain_command_block
         twilightforest:canopy_door
+        ceramics:clay_bucket
         tconstruct:longbow
         minecraft:structure_void
         enderio:block_not_holy_enlightened_fused_quartz
         tconstruct:shuriken
+        minecraft:brewing_stand
         enderio:item_soul_vial
         enderio:block_unholy_dark_fused_quartz
-        twilightforest:mangrove_door
-        tconstruct:scythe
-        enderio:block_not_unholy_fused_glass
-        twilightforest:trans_door
-        enderio:block_not_pasture_dark_fused_quartz
-        tconstruct:hatchet
-        minecraft:tipped_arrow
-        tconstruct:mattock
-        minecraft:structure_block
-        twilightforest:sort_door
-        twilightforest:miniature_structure
-        twilightforest:twilight_oak_door
-        enderio:block_holy_fused_glass
-        tconstruct:excavator
-        tconstruct:lumberaxe
-        enderio:block_not_pasture_enlightened_fused_glass
-        enderio:block_pasture_dark_fused_quartz
-        enderio:block_unholy_enlightened_fused_glass
-        enderio:block_unholy_fused_glass
-        enderio:block_dark_fused_glass
-        tconstruct:kama
-        enderio:block_not_holy_dark_fused_quartz
-        thermalexpansion:morb
-        enderio:block_not_pasture_dark_fused_glass
-        minecraft:repeating_command_block
-        twilightforest:mine_door
-        immersiveengineering:shader_bag
-        tconstruct:shortbow
-        enderio:block_not_holy_enlightened_fused_glass
-        bloodmagic:upgrade_tome
-        enderio:block_holy_dark_fused_glass
-        immersiveengineering:metal:40
-        enderio:block_not_holy_fused_glass
-        bloodmagic:upgrade_trainer
-        enderio:block_enlightened_fused_glass
-        tconstruct:arrow
-        enderio:block_dark_fused_quartz
-        forge:bucketfilled
-        tconstruct:crossbow
-        ceramics:clay_bucket
+        tconstruct:tough_binding
         minecraft:barrier
         enderio:item_broken_spawner
+        twilightforest:shader_bag
         enderio:block_not_holy_dark_fused_glass
         astralsorcery:blockcollectorcrystal
+        twilightforest:mangrove_door
+        tconstruct:shovel_head
         enderio:block_not_unholy_enlightened_fused_glass
         thermalexpansion:florb
+        tconstruct:scythe
+        tconstruct:pick_head
         tconstruct:broadsword
+        tconstruct:shard
+        enderio:block_not_unholy_fused_glass
+        twilightforest:shader
         enderio:block_not_unholy_fused_quartz
         enderio:block_not_unholy_enlightened_fused_quartz
+        tconstruct:kama_head
+        twilightforest:trans_door
+        enderio:block_not_pasture_dark_fused_quartz
         enderio:block_holy_fused_quartz
         enderio:block_pasture_dark_fused_glass
         enderio:block_not_unholy_dark_fused_quartz
         tconstruct:cleaver
+        tconstruct:hatchet
         enderio:block_unholy_enlightened_fused_quartz
         tconstruct:pickaxe
+        tconstruct:knife_blade
         minecraft:potion
+        tconstruct:pan_head
         enderio:block_pasture_enlightened_fused_glass
         immersiveengineering:shader
+        minecraft:tipped_arrow
+        tconstruct:hammer_head
+        tconstruct:cross_guard
+        tconstruct:mattock
+        tconstruct:bolt_core
         twilightforest:time_door
         enderio:block_not_unholy_dark_fused_glass
+        minecraft:structure_block
+        tconstruct:toolforge:0:tconstruct:metal:1
+        tconstruct:toolforge:0:minecraft:glowstone:0
         tconstruct:shovel
+        tconstruct:toolforge:0:enderio:block_alloy:9
+        tconstruct:toolforge:0:tconstruct:metal:4
+        tconstruct:toolforge:0:tconstruct:metal:5
+        tconstruct:toolforge:0:tconstruct:metal:2
+        tconstruct:toolforge:0:chisel:blockcobalt:0
+        tconstruct:toolforge:0:tconstruct:metal:3
+        twilightforest:sort_door
         enderio:block_pasture_fused_glass
+        tconstruct:tool_rod
+        tconstruct:arrow_head
+        twilightforest:miniature_structure
+        tconstruct:sword_blade
+        twilightforest:twilight_oak_door
         enderio:item_material:39
+        tconstruct:toolforge:0:twilightforest:block_storage:2
+        tconstruct:sharpening_kit
+        tconstruct:hand_guard
         minecraft:lingering_potion
+        tconstruct:excavator_head
+        tconstruct:toolforge:0:thaumcraft:metal_brass:0
+        enderio:block_holy_fused_glass
+        tconstruct:excavator
+        tconstruct:bow_limb
+        tconstruct:broad_axe_head
+        tconstruct:lumberaxe
         enderio:block_not_pasture_enlightened_fused_quartz
         minecraft:command_block_minecart
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:3
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:4
+        enderio:block_not_pasture_enlightened_fused_glass
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:5
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:6
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:0
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:1
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:2
+        tconstruct:sign_head
         enderio:block_holy_dark_fused_quartz
+        tconstruct:toolforge:0:thermalfoundation:storage_alloy:7
         enderio:block_unholy_dark_fused_glass
-        thaumcraft:plate:1
         enderio:block_holy_enlightened_fused_glass
+        enderio:block_pasture_dark_fused_quartz
         enderio:block_not_holy_fused_quartz
         minecraft:spawn_egg
+        enderio:block_unholy_enlightened_fused_glass
+        enderio:block_unholy_fused_glass
+        tconstruct:tough_tool_rod
+        enderio:block_dark_fused_glass
+        tconstruct:bow_string
+        tconstruct:kama
         minecraft:command_block
+        enderio:block_not_holy_dark_fused_quartz
         enderio:block_pasture_enlightened_fused_quartz
         thermalfoundation:material:640
+        thermalexpansion:morb
+        enderio:block_not_pasture_dark_fused_glass
+        minecraft:repeating_command_block
+        tconstruct:toolforge:0:chisel:blockuranium:0
+        twilightforest:mine_door
+        tconstruct:arrow_shaft
         enderio:block_holy_enlightened_fused_quartz
+        immersiveengineering:shader_bag
+        tconstruct:wide_guard
         minecraft:splash_potion
+        tconstruct:shortbow
+        tconstruct:toolforge:0:minecraft:redstone_block:0
         tconstruct:bolt
         tconstruct:rapier
+        enderio:block_not_holy_enlightened_fused_glass
+        bloodmagic:upgrade_tome
         astralsorcery:blockcelestialcollectorcrystal
+        tconstruct:toolforge:0:thermalfoundation:storage:1
         enderio:block_unholy_fused_quartz
         enderio:block_not_pasture_fused_quartz
+        tconstruct:toolforge:0:thermalfoundation:storage:2
         twilightforest:dark_door
+        tconstruct:axe_head
+        tconstruct:toolforge:0:thermalfoundation:storage:0
+        enderio:block_holy_dark_fused_glass
+        enderio:block_not_holy_fused_glass
+        tconstruct:toolforge:0:thermalfoundation:storage:7
+        tconstruct:toolforge:0:thermalfoundation:storage:5
+        tconstruct:toolforge:0:thermalfoundation:storage:6
+        tconstruct:toolforge:0:thermalfoundation:storage:3
+        tconstruct:toolforge:0:thermalfoundation:storage:4
         tconstruct:longsword
+        tconstruct:toolforge:0:twilightforest:block_storage:1
         enderio:block_enlightened_fused_quartz
+        bloodmagic:upgrade_trainer
+        tconstruct:toolforge:0:minecraft:gold_block:0
+        enderio:block_enlightened_fused_glass
         thermalfoundation:material:657
         thermalfoundation:material:656
         enderio:block_not_pasture_fused_glass
